fine-tuned avoir or etre

--- a/french/pages/exercise_avoir_etre.html
+++ b/french/pages/exercise_avoir_etre.html
@@ -88,7 +88,7 @@
 
                             <li>
                                 (<b title="Avez-vous aimé">Aimer</b>)
-                                <input type="text" pattern="As">
+                                <input type="text" pattern="Avez">
                                 -vous
                                 <input type="text" pattern="aimé">
                                 la dernière version de cette histoire ?
@@ -115,8 +115,8 @@
                             </li>
 
                             <li>
-                                Nous nous (<b title="sommes promenés">se promener</b>)
-                                <input type="text" pattern="aimé">
+                                Nous (<b title="nous sommes promenés">se promener</b>)
+                                <input type="text" class="extra-wide" pattern="nous sommes promenés">
                                 toute la soirée.
                             </li>
 
@@ -139,8 +139,8 @@
                             </li>
 
                             <li>
-                                Attention ! Vous vous (<b title="êtes assis">S’asseoir</b>)
-                                <input type="text" pattern="êtes assis">
+                                Attention ! Vous (<b title="vous êtes assis">s’asseoir</b>)
+                                <input type="text" class="wide" pattern="vous êtes assis">
                                 sur le journal.
                             </li>
 
@@ -157,8 +157,8 @@
                             </li>
 
                             <li>
-                                Ces amis (<b title="sont vus">se voir</b>)
-                                <input type="text" pattern="sont vus">
+                                Ces amis (<b title="se sont vus">se voir</b>)
+                                <input type="text" pattern="se sont vus">
                                 chaque fin de semaine.
                             </li>
                         </ol>
@@ -193,7 +193,7 @@
 
                             <li>
                                 Nous (<b title="sommes montés">monter</b>)
-                                <input type="text" pattern="sommes montés">
+                                <input type="text" class="wide" pattern="sommes montés">
                                 dans le train juste avant le départ.
                             </li>
 
@@ -207,7 +207,7 @@
 
                             <li>
                                 Nous (<b title="sommes sortis">sortir</b>)
-                                <input type="text" pattern="sommes sortis">
+                                <input type="text" class="wide" pattern="sommes sortis">
                                 tôt pour prendre l’autobus.
                             </li>
 
@@ -258,20 +258,20 @@
                             </li>
 
                             <li>
-                                Ce matin, je (<b title="suis passé">passer</b>)
-                                <input type="text" pattern="suis passé">
+                                Ce matin, (<b title="je suis passé">je passer</b>)
+                                <input type="text" pattern="je suis passé">
                                 chez toi, mais il n’y avait personne.
                             </li>
 
                             <li>
                                 Nous (<b title="sommes montés">monter</b>)
-                                <input type="text" pattern="sommes montés">
+                                <input type="text" class="wide" pattern="sommes montés">
                                 dans la chambre de notre fils pour lui parler.
                             </li>
 
                             <li>
                                 Vous (<b title="êtes descendus">descendre</b>)
-                                <input type="text" pattern="êtes descendus">
+                                <input type="text" class="wide" pattern="êtes descendus">
                                 à l’hôtel pour la fin de semaine.
                             </li>
 
@@ -308,7 +308,7 @@
 
                             <li>
                                 Pour trouver mes clés, (<b title="j'ai retourné">je retourner</b>)
-                                <input type="text" pattern="j'ai retourné">
+                                <input type="text" class="wide" pattern="j'ai retourné">
                                 mes poches de manteau à l’envers.
                             </li>
 
