--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -72,7 +72,7 @@
                         <th class="conjugations" colspan="2">passé composé</th>
 
                         <!-- A2 -->
-                        <th class="conjugations" colspan="1">avoir-être</th>
+                        <th class="conjugations" colspan="1">Avoir ou Être</th>
                         <th class="conjugations" colspan="2">imparfait</th>
                         <th class="conjugations" colspan="2">futur simple</th>
                         <th class="others" colspan="1" title="prépositions de temps">prép. de temps</th>
