--- a/french/index.html
+++ b/french/index.html
@@ -46,6 +46,13 @@
 
   <div class="card">
     <span class="cefr">A1</span>
+    <header>Devoir, Pouvoir, Falloir, Vouloir</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_devoir_pouvoir_falloir_vouloir.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">A1</span>
     <header>Le passé composé</header>
     <a class="theory">théorie</a>
     <a href="pages/conjugations.html?Le%20pass%C3%A9%20compos%C3%A9">exercice de liste de verbes</a>
