--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -60,7 +60,7 @@
                     <tr>
                         <th rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
-                        <th class="conjugations" colspan="4">A1</th>
+                        <th class="conjugations" colspan="5">A1</th>
                         <th class="conjugations others" colspan="10">A2</th>
                         <th class="conjugations" colspan="6">B1</th>
                         <th class="conjugations" colspan="5">B2</th>
@@ -69,6 +69,7 @@
                     <tr>
                         <!-- A1 -->
                         <th class="conjugations" colspan="2">présent</th>
+                        <th class="conjugations" colspan="1">Devoir Pouvoir Falloir</th>
                         <th class="conjugations" colspan="2">passé composé</th>
 
                         <!-- A2 -->
@@ -97,6 +98,8 @@
                         <!-- présent -->
                         <th class="conjugations"><a href="conjugations.html?Le%20pr%C3%A9sent">liste</a></th>
                         <th class="conjugations"><a href="exercise_present.html">texte</a></th>
+
+                        <th class="conjugations"><a href="exercise_devoir_pouvoir_falloir_vouloir.html">texte</a></th>
 
                         <!-- passé composé -->
                         <th class="conjugations"><a href="conjugations.html?Le%20pass%C3%A9%20compos%C3%A9">liste</a>
@@ -171,6 +174,8 @@
                             <!-- A1 -->
                             <td class="conjugations" data-key="conjugations.html?Le%20pr%C3%A9sent"></td>
                             <td class="conjugations" data-key="exercise_present.html"></td>
+
+                            <td class="conjugations" data-key="exercise_devoir_pouvoir_falloir_vouloir.html"></td>
 
                             <td class="conjugations" data-key="conjugations.html?Le%20pass%C3%A9%20compos%C3%A9"></td>
                             <td class="conjugations" data-key="exercise_presentperfect.html"></td>
