fine-tuned exercise for devoir - pouvoir - falloir

--- a/french/pages/exercise_devoir_pouvoir_falloir_vouloir.html
+++ b/french/pages/exercise_devoir_pouvoir_falloir_vouloir.html
@@ -44,7 +44,7 @@
                                 </li>
                                 <li>
                                     <span><b>la permission</b></span>
-                                    <span>Est-ce que je <ipeux< /i> sortir ?</span>
+                                    <span>Est-ce que je <i>peux</i> sortir ?</span>
                                 </li>
                                 <li>
                                     <span><b>la demande</b></span>
