text exercise for devoir-pouvoir-falloir-vouloir

--- a/french/pages/exercise_devoir_pouvoir_falloir_vouloir.html
+++ b/french/pages/exercise_devoir_pouvoir_falloir_vouloir.html
@@ -70,7 +70,7 @@
                                 partir ?
                             </li>
                             <li>
-                                <b title="peut - pouvez">impossibilité</b> – Il ne
+                                <b title="peut - pouvez">impossibilité ... demande</b> – Il ne
                                 <input type="text" pattern="peut">
                                 pas enlever son manteau. Vous
                                 <input type="text" pattern="pouvez">
@@ -90,6 +90,384 @@
                                 <b title="peux">demande</b> – Je n’ai pas d’argent. Est-ce que tu
                                 <input type="text" pattern="peux">
                                 m’en prêter ?
+                            </li>
+
+                        </ol>
+                    </section>
+                </li>
+
+                <li>
+                    <section>
+                        <h4>Conjuguez le verbe <i>vouloir</i> au présent.</h4>
+                        <div class="span-third-two-thirds">
+                            Le verbe <i>vouloir</i> indique :<br />
+                            <ul>
+                                <li>
+                                    <span><b>l’intention, le désir</b></span>
+                                    <span>Je <i>veux</i> dormir : je suis fatigué.</span>
+                                </li>
+                                <li>
+                                    <span><b>le refus d’un objet</b></span>
+                                    <span>Je ne <i>veux</i> pas de dessert, merci.</span>
+                                </li>
+                                <li>
+                                    <span><b>le refus de faire qqch</b></span>
+                                    <span>Je ne <i>veux</i> pas sortir.</span>
+                                </li>
+                                <li>
+                                    <span><b>l’invitation</b></span>
+                                    <span><i>Veux</i>-tu venir avec moi au cinéma ?</span>
+                                </li>
+                                <li>
+                                    <span><b>l’offre d’un objet</b></span>
+                                    <span><i>Veux</i>-tu un café ?</span>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <ol>
+                            <li>
+                                <b title="veut">désir</b> – Il
+                                <input type="text" pattern="veut">
+                                aller en vacances.
+                            </li>
+
+                            <li>
+                                <b title="voulons">intention</b> – Nous
+                                <input type="text" pattern="voulons">
+                                acheter une nouvelle maison.
+                            </li>
+
+                            <li>
+                                <b title="voulez">offre d’un objet</b> – Vous
+                                <input type="text" pattern="voulez">
+                                une autre part de gâteau ?
+                            </li>
+
+                            <li>
+                                <b title="veut">refus de faire quelque chose</b> – Elle ne
+                                <input type="text" pattern="veut">
+                                plus danser : elle a mal aux pieds.
+                            </li>
+
+                            <li>
+                                <b title="veulent">désir</b> – Mes amies
+                                <input type="text" pattern="veulent">
+                                enseigner le français.
+                            </li>
+
+                            <li>
+                                <b title="Voulez">invitation</b> –
+                                <input type="text" pattern="Voulez">
+                                -vous m’aider ? J’ai besoin d’aide.
+                            </li>
+
+                            <li>
+                                <b title="veulent">intention</b> – En fin de semaine, ils
+                                <input type="text" pattern="veulent">
+                                faire du ski.
+                            </li>
+                            <li>
+                                <b title="veut">refus de faire quelque chose</b> – Roger ne
+                                <input type="text" pattern="veut">
+                                plus travailler.
+                            </li>
+
+                        </ol>
+                    </section>
+                </li>
+
+                <li>
+                    <section>
+                        <h4>Conjuguez le verbe <i>devoir</i> au présent.</h4>
+                        <div class="span-third-two-thirds">
+                            Le verbe <i>devoir</i> indique :<br />
+                            <ul>
+                                <li>
+                                    <span><b>l’obligation</b></span>
+                                    <span>Vous <i>devez</i> maigrir : vous êtes trop gros.</span>
+                                </li>
+
+                                <li>
+                                    <span><b>la suggestion</b></span>
+                                    <span>Tu <i>dois</i> parler au directeur maintenant.</span>
+                                </li>
+
+                                <li>
+                                    <span><b>l’interdiction</b></span>
+                                    <span>Chut ! Tu ne <i>dois</i> pas parler ici.</span>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <ol>
+                            <li>
+                                <b title="devez">obligation</b> – Vous êtes trop maigre : vous
+                                <input type="text" pattern="devez">
+                                engraisser.
+                            </li>
+
+                            <li>
+                                <b title="devons">obligation</b> – Nous sommes pressés : nous
+                                <input type="text" pattern="devons">
+                                prendre un taxi.
+                            </li>
+
+                            <li>
+                                <b title="doit">interdiction</b> – On ne
+                                <input type="text" pattern="doit">
+                                pas entrer dans cette salle.
+                            </li>
+
+                            <li>
+                                <b title="devez">obligation</b> – Vous
+                                <input type="text" pattern="devez">
+                                étudier plus.
+                            </li>
+
+                            <li>
+                                <b title="dois">obligation</b> – J’ai faim ! Je
+                                <input type="text" pattern="dois">
+                                manger tout de suite.
+                            </li>
+
+                            <li>
+                                <b title="dois">suggestion</b> – Pour aller à la cafétéria, tu
+                                <input type="text" pattern="dois">
+                                monter l’escalier et tourner à droite.
+                            </li>
+                            <li>
+                                <b title="doit">obligation</b> – Elle est trop grosse : elle
+                                <input type="text" pattern="doit">
+                                maigrir.
+                            </li>
+
+                            <li>
+                                <b title="dois">obligation</b> – Je n’ai plus d’argent : je
+                                <input type="text" pattern="dois">
+                                travailler.
+                            </li>
+
+                            <li>
+                                <b title="doit">interdiction</b> – On ne
+                                <input type="text" pattern="doit">
+                                pas fumer à l’université.
+                            </li>
+
+                            <li>
+                                <b title="devez">obligation</b> – Votre rendez-vous est à 10h. Vous
+                                <input type="text" pattern="devez">
+                                attendre un peu.
+                            </li>
+                        </ol>
+                    </section>
+                </li>
+
+                <li>
+                    <section>
+                        <h4>Conjuguez le verbe <i>falloir</i> au présent.</h4>
+                        <div class="span-third-two-thirds">
+                            Le verbe <i>falloir</i> indique :<br />
+                            <ul>
+                                <li>
+                                    <span><b>la prescription</b></span>
+                                    <span>En auto, il <i>faut</i> mettre sa ceinture.</span>
+                                </li>
+
+                                <li>
+                                    <span><b>l’interdiction</b></span>
+                                    <span>Il ne <i>faut</i> pas parler anglais pendant le cours.</span>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <ol>
+                            <li>
+                                <b title="faut">prescription</b> – En voyage, il
+                                <input type="text" pattern="faut">
+                                apporter son passeport.
+                            </li>
+
+                            <li>
+                                <b title="faut">interdiction</b> – Pendant l’examen, il ne
+                                <input type="text" pattern="faut">
+                                pas utiliser le dictionnaire.
+                            </li>
+
+                            <li>
+                                <b title="faut">prescription</b> – Pour voir le spectacle, il
+                                <input type="text" pattern="faut">
+                                réserver des places.
+                            </li>
+
+                            <li>
+                                <b title="faut">prescription</b> – Il
+                                <input type="text" pattern="faut">
+                                se reposer chaque nuit.
+                            </li>
+
+                            <li>
+                                <b title="faut">prescription</b> – Pour voir le film, il
+                                <input type="text" pattern="faut">
+                                acheter un billet.
+                            </li>
+
+                            <li>
+                                <b title="faut">prescription</b> – Il
+                                <input type="text" pattern="faut">
+                                attendre dans le couloir.
+                            </li>
+
+                            <li>
+                                <b title="faut">interdiction</b> – Il ne
+                                <input type="text" pattern="faut">
+                                pas manger de sucre : c’est mauvais pour la santé.
+                            </li>
+
+                            <li>
+                                <b title="faut">prescription</b> – Il est minuit : il
+                                <input type="text" pattern="faut">
+                                rentrer.
+                            </li>
+
+                        </ol>
+                    </section>
+                </li>
+
+                <li>
+                    <section>
+                        <h4>Complétez les phrases avec les verbes <i>devoir</i>, <i>pouvoir</i>, <i>vouloir</i> et
+                            <i>falloir</i>.
+                        </h4>
+
+                        <ol>
+                            <li>
+                                <b title="peut ... doit">possibilité ... obligation</b> – On
+                                <input type="text" pattern="peut">
+                                acheter de l’alcool, mais on
+                                <input type="text" pattern="doit">
+                                avoir 18 ans.
+                            </li>
+                            <li>
+                                <b title="voulez ... devez">intention ... obligation</b> – Si vous
+                                <input type="text" pattern="voulez">
+                                réussir, vous
+                                <input type="text" pattern="devez">
+                                étudier.
+                            </li>
+
+                            <li>
+                                <b title="veulent ... doivent">intention ... obligation</b> – S’ils
+                                <input type="text" pattern="veulent">
+                                être en forme, ils
+                                <input type="text" pattern="doivent">
+                                faire de l’exercice.
+                            </li>
+
+                            <li>
+                                <b title="peut ... doit">désir ... obligation</b> – On
+                                <input type="text" pattern="peut">
+                                visiter d’autres pays, mais on
+                                <input type="text" pattern="doit">
+                                posséder un visa.
+                            </li>
+
+                            <li>
+                                <b title="peux">demande</b> – Est-ce que je
+                                <input type="text" pattern="peux">
+                                avoir un croissant et une tasse de thé ?
+                            </li>
+
+                            <li>
+                                <b title="veux">refus d’un objet</b> – Je ne
+                                <input type="text" pattern="veux">
+                                pas de café, merci.
+                            </li>
+
+                            <li>
+                                <b title="peut|veut">possibilité/ désir</b> – Elle
+                                <input type="text" pattern="peut|veut">
+                                garder les enfants ce soir.
+                            </li>
+
+                            <li>
+                                <b title="doit">obligation</b> – Il est trop tard : elle
+                                <input type="text" pattern="doit">
+                                partir immédiatement
+                            </li>
+
+                            <li>
+                                <b title="devez">suggestion</b> – Vous
+                                <input type="text" pattern="devez">
+                                prendre la première rue à gauche et continuer.
+                            </li>
+
+                            <li>
+                                <b title="doit">obligation</b> – En moto, on
+                                <input type="text" pattern="doit">
+                                mettre son casque.
+                            </li>
+
+                            <li>
+                                <b title="peux">permission</b> – Est-ce que je
+                                <input type="text" pattern="peux">
+                                quitter maintenant ?
+                            </li>
+
+                            <li>
+                                <b title="Voulez">invitation</b> –
+                                <input type="text" pattern="Voulez">
+                                -vous vous asseoir ici.
+                            </li>
+
+                            <li>
+                                <b title="Veux">offre d’un objet</b> –
+                                <input type="text" pattern="Veux">
+                                -tu de la soupe ?
+                            </li>
+
+                            <li>
+                                <b title="dois">obligation</b> – Tu
+                                <input type="text" pattern="dois">
+                                respecter l’avis du médecin.
+                            </li>
+
+                            <li>
+                                <b title="peux">impossibilité</b> – Je suis tombé : je ne
+                                <input type="text" pattern="peux">
+                                pas marcher.
+                            </li>
+
+                            <li>
+                                <b title="Peux">demande</b> –
+                                <input type="text" pattern="Peux">
+                                -tu acheter du lait ?
+                            </li>
+
+                            <li>
+                                <b title="dois">obligation</b> – Quand
+                                <input type="text" pattern="dois">
+                                -tu retourner chez le médecin ?
+                            </li>
+
+                            <li>
+                                <b title="doit">obligation</b> – Il a besoin d’argent : il
+                                <input type="text" pattern="doit">
+                                chercher un travail.
+                            </li>
+
+                            <li>
+                                <b title="pouvez ... devez">possibilité ... obligation</b> – Vous
+                                <input type="text" pattern="pouvez">
+                                suivre ce cours, mais vous
+                                <input type="text" pattern="devez">
+                                être inscrits.
+                            </li>
+
+                            <li>
+                                <b title="dois">obligation</b> – Ma voiture est en panne : je
+                                <input type="text" pattern="dois">
+                                l’apporter au garage.
                             </li>
 
                         </ol>
