--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -43,7 +43,10 @@
                         <input type="checkbox" name="duration" checked="checked">Colonne de durée
                     </label>
                     <label>
-                        <input type="checkbox" name="conjugations" checked="checked">Conjugaisons
+                        <input type="checkbox" name="conjugations" checked="checked">Conjugaisons de base
+                    </label>
+                    <label>
+                        <input type="checkbox" name="conjugations-plus" checked="checked">Conjugaisons plus
                     </label>
                     <label title="prépositions, conjonctions, pronoms">
                         <input type="checkbox" name="others" checked="checked">Prép./conj./pronoms
@@ -60,20 +63,20 @@
                     <tr>
                         <th rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
-                        <th class="conjugations" colspan="5">A1</th>
-                        <th class="conjugations others" colspan="10">A2</th>
+                        <th class="conjugations conjugations-plus" colspan="5">A1</th>
+                        <th class="conjugations conjugations-plus others" colspan="10">A2</th>
                         <th class="conjugations" colspan="6">B1</th>
-                        <th class="conjugations" colspan="5">B2</th>
+                        <th class="conjugations conjugations-plus" colspan="7">B2</th>
                         <th class="tense-sequence" colspan="4"></th>
                     </tr>
                     <tr>
                         <!-- A1 -->
                         <th class="conjugations" colspan="2">présent</th>
-                        <th class="conjugations" colspan="1">Devoir Pouvoir Falloir</th>
+                        <th class="conjugations-plus" colspan="1">Devoir Pouvoir Falloir</th>
                         <th class="conjugations" colspan="2">passé composé</th>
 
                         <!-- A2 -->
-                        <th class="conjugations" colspan="1">Avoir ou Être</th>
+                        <th class="conjugations-plus" colspan="1">Avoir ou Être</th>
                         <th class="conjugations" colspan="2">imparfait</th>
                         <th class="conjugations" colspan="2">futur simple</th>
                         <th class="others" colspan="1" title="prépositions de temps">prép. de temps</th>
@@ -87,8 +90,9 @@
                         <th class="conjugations" colspan="2">subjonctif présent</th>
 
                         <!-- B2 -->
+                        <th class="conjugations" colspan="2">subjonctif passé</th>
                         <th class="conjugations" colspan="2">conditionnel passé</th>
-                        <th class="conjugations" colspan="1">passif</th>
+                        <th class="conjugations-plus" colspan="1">passif</th>
                         <th class="conjugations" colspan="2">futur antérieur</th>
 
                         <th class="tense-sequence" colspan="4">concordance des temps</th>
@@ -99,7 +103,8 @@
                         <th class="conjugations"><a href="conjugations.html?Le%20pr%C3%A9sent">liste</a></th>
                         <th class="conjugations"><a href="exercise_present.html">texte</a></th>
 
-                        <th class="conjugations"><a href="exercise_devoir_pouvoir_falloir_vouloir.html">texte</a></th>
+                        <th class="conjugations-plus"><a href="exercise_devoir_pouvoir_falloir_vouloir.html">texte</a>
+                        </th>
 
                         <!-- passé composé -->
                         <th class="conjugations"><a href="conjugations.html?Le%20pass%C3%A9%20compos%C3%A9">liste</a>
@@ -107,7 +112,7 @@
                         <th class="conjugations"><a href="exercise_presentperfect.html">texte</a></th>
 
                         <!-- A2 -->
-                        <th class="conjugations"><a href="exercise_avoir_etre.html">texte</a></th>
+                        <th class="conjugations-plus"><a href="exercise_avoir_etre.html">texte</a></th>
                         <!-- imparfait -->
                         <th class="conjugations"><a href="conjugations.html?L%27imparfait">liste</a></th>
                         <th class="conjugations"><a href="exercise_imperfect.html">texte</a></th>
@@ -142,12 +147,18 @@
                         </th>
 
                         <!-- B2 -->
+                        <!-- subjonctif passé -->
+                        <th class="conjugations"><a href="">liste</a>
+                        </th>
+                        <th class="conjugations"><a href="">texte</a><small>*</small>
+                        </th>
+
                         <!-- conditionnel passé -->
                         <th class="conjugations"><a href="conjugations.html?Le%20conditionnel%20passé">liste</a></th>
                         <th class="conjugations"><a href="exercise_conditionalperfect.html">texte</a></th>
 
                         <!-- passif -->
-                        <th class="conjugations"><a href="exercise_passive.html">texte</a><small>*</small></th>
+                        <th class="conjugations-plus"><a href="exercise_passive.html">texte</a><small>*</small></th>
 
                         <!-- futur antérieur -->
                         <th class="conjugations"><a href="conjugations.html?Le%20futur%20antérieur">liste</a></th>
@@ -175,13 +186,13 @@
                             <td class="conjugations" data-key="conjugations.html?Le%20pr%C3%A9sent"></td>
                             <td class="conjugations" data-key="exercise_present.html"></td>
 
-                            <td class="conjugations" data-key="exercise_devoir_pouvoir_falloir_vouloir.html"></td>
+                            <td class="conjugations-plus" data-key="exercise_devoir_pouvoir_falloir_vouloir.html"></td>
 
                             <td class="conjugations" data-key="conjugations.html?Le%20pass%C3%A9%20compos%C3%A9"></td>
                             <td class="conjugations" data-key="exercise_presentperfect.html"></td>
 
                             <!-- A2 -->
-                            <td class="conjugations" data-key="exercise_avoir_etre.html"></td>
+                            <td class="conjugations-plus" data-key="exercise_avoir_etre.html"></td>
 
                             <td class="conjugations" data-key="conjugations.html?L%27imparfait"></td>
                             <td class="conjugations" data-key="exercise_imperfect.html"></td>
@@ -207,10 +218,13 @@
                             <td class="conjugations" data-key="exercise_presentsubjunctive.html"></td>
 
                             <!-- B2 -->
+                            <td class="conjugations" data-key=""></td>
+                            <td class="conjugations" data-key=""></td>
+
                             <td class="conjugations" data-key="conjugations.html?Le%20conditionnel%20pass%C3%A9"></td>
                             <td class="conjugations" data-key="exercise_conditionalperfect.html"></td>
 
-                            <td class="conjugations" data-key="exercise_passive.html"></td>
+                            <td class="conjugations-plus" data-key="exercise_passive.html"></td>
 
                             <td class="conjugations" data-key="conjugations.html?Le%20futur%20ant%C3%A9rieur"></td>
                             <td class="conjugations" data-key="exercise_futureperfect.html"></td>
