added text exercise for qui, quel, quelle

--- a/french/index.html
+++ b/french/index.html
@@ -53,6 +53,13 @@
 
   <div class="card">
     <span class="cefr">A1</span>
+    <header>Qui, quel, quelle</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_qui_quel_quelle.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">A1</span>
     <header>Le passé composé</header>
     <a class="theory">théorie</a>
     <a href="pages/conjugations.html?Le%20pass%C3%A9%20compos%C3%A9">exercice de liste de verbes</a>
