added text exercise for qui, quel, quelle to stats page

--- a/french/pages/exercise_qui_quel_quelle.html
+++ b/french/pages/exercise_qui_quel_quelle.html
@@ -118,7 +118,7 @@
                             </li>
 
                             <li>
-                                <span title="Quel argent">L’argent était faux !</span>
+                                <span title="Quel argent">L’argent est faux !</span>
                                 <span>-&nbsp;<input type="text" pattern="Quel argent"> !</span>
                             </li>
                         </ol>
