--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -63,7 +63,7 @@
                     <tr>
                         <th rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
-                        <th class="conjugations conjugations-plus" colspan="5">A1</th>
+                        <th class="conjugations conjugations-plus others" colspan="6">A1</th>
                         <th class="conjugations conjugations-plus others" colspan="10">A2</th>
                         <th class="conjugations" colspan="6">B1</th>
                         <th class="conjugations conjugations-plus" colspan="7">B2</th>
@@ -74,6 +74,7 @@
                         <th class="conjugations" colspan="2">présent</th>
                         <th class="conjugations-plus" colspan="1">Devoir Pouvoir Falloir</th>
                         <th class="conjugations" colspan="2">passé composé</th>
+                        <th class="others" colspan="1">Qui Quel Quelle</th>
 
                         <!-- A2 -->
                         <th class="conjugations-plus" colspan="1">Avoir ou Être</th>
@@ -110,6 +111,9 @@
                         <th class="conjugations"><a href="conjugations.html?Le%20pass%C3%A9%20compos%C3%A9">liste</a>
                         </th>
                         <th class="conjugations"><a href="exercise_presentperfect.html">texte</a></th>
+
+                        <th class="others"><a href="exercise_qui_quel_quelle.html">texte</a>
+                        </th>
 
                         <!-- A2 -->
                         <th class="conjugations-plus"><a href="exercise_avoir_etre.html">texte</a></th>
@@ -190,6 +194,8 @@
 
                             <td class="conjugations" data-key="conjugations.html?Le%20pass%C3%A9%20compos%C3%A9"></td>
                             <td class="conjugations" data-key="exercise_presentperfect.html"></td>
+
+                            <td class="others" data-key="exercise_qui_quel_quelle.html"></td>
 
                             <!-- A2 -->
                             <td class="conjugations-plus" data-key="exercise_avoir_etre.html"></td>
