fine-tuned exercise for que, quel, quelle

--- a/french/pages/exercise_qui_quel_quelle.html
+++ b/french/pages/exercise_qui_quel_quelle.html
@@ -71,8 +71,8 @@
                             </li>
 
                             <li>
-                                <span title="Qu’écoutez-vous">Qu’est-ce que vous écoutez ?</span>
-                                <span>-&nbsp;<input type="text" pattern="Qu’écoutez-vous"> ?</span>
+                                <span title="Qu'écoutez-vous">Qu’est-ce que vous écoutez ?</span>
+                                <span>-&nbsp;<input type="text" pattern="Qu'écoutez-vous"> ?</span>
                             </li>
 
                             <li>
@@ -136,48 +136,48 @@
                             </li>
 
                             <li>
-                                <input type="text" pattern="Qu'est-ce que">
+                                <input type="text" class="wide" pattern="Qu'est-ce que">
                                 <span title="Qu'est-ce que">vous faites ?</span>
                             </li>
 
                             <li>
-                                <input type="text" pattern="Qu'est-ce que">
+                                <input type="text" class="wide" pattern="Qu'est-ce que">
                                 <span title="Qu'est-ce que">vous aimez faire ?</span>
                             </li>
 
                             <li>
-                                <input type="text" pattern="Quelle">
-                                <span title="Quelle">est votre activité(f) préférée ?</span>
+                                <input type="text" class="wide" pattern="Quelle">
+                                <span title="Quelle">est votre activité préférée ?</span>
                             </li>
 
                             <li>
-                                <input type="text" pattern="Qu'est-ce que">
+                                <input type="text" class="wide" pattern="Qu'est-ce que">
                                 <span title="Qu'est-ce que">vous apportez en vacances ?</span>
                             </li>
 
                             <li>
-                                <input type="text" pattern="Quel">
-                                <span title="Quel">âge(m) avez-vous ?</span>
+                                <input type="text" class="wide" pattern="Quel">
+                                <span title="Quel">âge avez-vous ?</span>
                             </li>
 
                             <li>
-                                <input type="text" pattern="Quel">
-                                <span title="Quel">est votre travail(m) ?</span>
+                                <input type="text" class="wide" pattern="Quel">
+                                <span title="Quel">est votre travail ?</span>
                             </li>
 
                             <li>
-                                <input type="text" pattern="Quel">
-                                <span title="Quel">est votre passe-temps(m) ?</span>
+                                <input type="text" class="wide" pattern="Quel">
+                                <span title="Quel">est votre passe-temps ?</span>
                             </li>
 
                             <li>
-                                <input type="text" pattern="Qu'est-ce que">
+                                <input type="text" class="wide" pattern="Qu'est-ce que">
                                 <span title="Qu'est-ce que">vous cuisinez ?</span>
                             </li>
 
                             <li>
-                                <input type="text" pattern="Quel">
-                                <span title="Quel">est votre emploi(m) du temps ?</span>
+                                <input type="text" class="wide" pattern="Quel">
+                                <span title="Quel">est votre emploi du temps ?</span>
                             </li>
                         </ol>
                     </section>
@@ -197,7 +197,7 @@
                             <li>
                                 <span>
                                     <input type="text" pattern="Quel">
-                                    <span title="Quel">président(m) est
+                                    <span title="Quel">président est
                                         mort à Dallas au Texas ?</span>
                                 </span>
                                 <span>- John F. Kennedy.</span>
@@ -206,7 +206,7 @@
                             <li>
                                 <span>
                                     <input type="text" pattern="Quelle">
-                                    <span title="Quelle">marque(f) de voiture achetez-vous ?</span>
+                                    <span title="Quelle">marque de voiture achetez-vous ?</span>
 
                                 </span>
                                 <span>- Honda.</span>
@@ -214,7 +214,7 @@
 
                             <li>
                                 <span><input type="text" pattern="Quel">
-                                    <span title="Quel">temps(m) fait-il aujourd’hui ?</span>
+                                    <span title="Quel">temps fait-il aujourd’hui ?</span>
 
                                 </span>
                                 <span>- Froid et ensoleillé.</span>
@@ -239,7 +239,7 @@
                             <li>
                                 <span>
                                     <input type="text" pattern="Quelle">
-                                    <span title="Qui">langue(f) perlez-vous ?</span>
+                                    <span title="Qui">langue perlez-vous ?</span>
                                 </span>
                                 <span>- Portugais.</span>
                             </li>
