added text exercise for quand - comment - combien

--- a/french/index.html
+++ b/french/index.html
@@ -190,6 +190,13 @@
 
   <div class="card">
     <span class="cefr">A2</span>
+    <header>Quand, Comment, Combien</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_quand_comment_combien.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">A2</span>
     <header>Les prépositions de temps</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_time_prepositions.html">exercice de texte</a>
